--- a/resources/assets/less/theForms.less
+++ b/resources/assets/less/theForms.less
@@ -73,17 +73,19 @@
 
 /* === HTML5 validation styles === */
 .processForm input:required, .processForm textarea:required {
-    background: #efeae3 url(../../../public/images/asterisk.png) no-repeat 98% center;
+    background: #efeae3 url(../images/asterisk.png) no-repeat 98% center;
 }
 
+
+
 .processForm input:required:valid, .processForm textarea:required:valid {
-    background: #fff url(../../../public/images/valid.png) no-repeat 98% center;
+    background: #fff url(../images/valid.png) no-repeat 98% center;
     box-shadow: 0 0 5px #5cd053;
     border-color: #28921f;
 }
 
 .processForm input:focus:invalid, .processForm textarea:focus:invalid {
-    background: #fff url(../../../public/images/invalid.png) no-repeat 98% center;
+    background: #fff url(../images/invalid.png) no-repeat 98% center;
     box-shadow: 0 0 5px #d45252;
     border-color: #b03535
 }
@@ -114,4 +116,8 @@
     padding:3px;
     margin-left: 0px;
     cursor: pointer;
+}
+
+.centerMe{
+  text-align: center;
 }
