reports download completed

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -1,6 +1,8 @@
 <br >
 <div class="theForm" >
 
+<input type="hidden" name="reportType" id="reportType" value="separation" >
+
 <div class="left3" ><span class="bold" >Name: </span >
 
     {{ givenname }} {{ sn }}
