send reports by email

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -136,7 +136,7 @@ P.TO days/Hours: <input class="inputRender" name="ptoDays" id="ptoDays" value="t
 <hr >
 <label >
     <input type="checkbox" name="disableUser" id="disableUser" checked > Deactivate user from the system.
-
+    <input type="hidden" name="sAMAccountName" value="{{ sAMAccountName }}" >
 </label >
 
 
