jquery autocomplete applied for newhire and separation forms update jquery iu with bower

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -24,7 +24,7 @@
 <div >
     Nickname (if applicable): <input type="text" name="nickname" id="nickname" class="inputRender" >
 </div >
-<br><br>
+<br ><br >
 
 <div >Title:
     <input type="text" size="50%" name="title" class="inputRender" value="{{ title }}" required="" >
@@ -160,8 +160,11 @@ E-Mail Distribution List:
     <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="citrix"
                         value="Sales Center/Citrix and Genesys ID. (applicable for Customer Care)" > Sales
         Center/Citrix and Genesys ID. (applicable for Customer Care)</label ></li >
+</ul >
 
+<p ><span >Assets</span ></p >
 
+<ul id="itChecklistAssets" style="text-align: left; list-style: none" >
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="email"
                         value="e-mail Scanner (if applicable)" > e-mail Scanner (if applicable)</label ></li >
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="laptop" value="Laptop" >
@@ -233,6 +236,7 @@ Aditional Instructions if applicable: <br >
 
 
 <p ></p ><br >
+
 <div class="subHeader" >COMPANY CREDIT CARD-Marjorie Guthrie (if applicable)-included in new hires and separation
     notices
 </div >
