add/remove from AD groups done

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -149,18 +149,25 @@ E-Mail Distribution List:
 <ul id="itChecklist" style="text-align: left; list-style: none" >
 
 
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="illyusaNA"
-                        value="illyusaNorth America" > illyusaNorth America</label ></li >
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="illyryebrook"
-                        value="illyryebrook" > illyryebrook</label ></li >
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="illyManagers"
-                        value="illyManagers" > illyManagers</label ></li >
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="illySales" value="illySales" >
-        illySales</label ></li >
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" id="citrix"
-                        value="Sales Center/Citrix and Genesys ID. (applicable for Customer Care)" > Sales
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" value="illyusaTeam Distribution Group"
+            >illyusaTeam Distribution Group</label ></li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
+                        value="illyusa Rye Brook Distribution Group"
+            >illyusa Rye Brook Distribution Group</label ></li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
+                        value="illy NYC Team Distribution Group"
+            >illy NYC Team Distribution Group</label ></li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
+                        value="illyusa Managers Distribution Group"
+            >illyusa Managers Distribution Group</label ></li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
+                        value="illyusa Sales Team Distribution Group" >illyusa Sales Team Distribution Group</label >
+    </li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" value="citrix"
+                        value="Sales Center/Citrix and Genesys ID. (applicable for Customer Care)" >Sales
         Center/Citrix and Genesys ID. (applicable for Customer Care)</label ></li >
 </ul >
+
 
 <p ><span >Assets</span ></p >
 
@@ -252,7 +259,7 @@ Aditional Instructions if applicable: <br >
 </ul >
 <p ></p ><br >
 
-<input type="submit" id="submit" class="inputRender" value="Submit" >
+<input type="submit" id="submit" name="submit" class="inputRender" value="Submit" >
 <input type="button" id="cancel" class="inputRender" value="Cancel" >
 
 </div >
