applied changes request by maren         Finance - Marjorie Guthrie<br>         (Credit Card and Concur Access Requests) *new hires and separation

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -244,8 +244,9 @@ Aditional Instructions if applicable: <br >
 
 <p ></p ><br >
 
-<div class="subHeader" >COMPANY CREDIT CARD-Marjorie Guthrie (if applicable)-included in new hires and separation
-    notices
+    <div class="subHeader" > Finance - Marjorie Guthrie<br >
+        (Credit Card and Concur Access Requests) *new hires and separation
+
 </div >
 <ul >
     <li >
