--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -143,7 +143,7 @@
 <br >
 
     E-Mail Distribution List:<br >
-    (Check groups to remove the user form)
+    (Check groups the user will be removed from)
 
 
 <ul id="itChecklist" style="text-align: left; list-style: none" >
@@ -163,9 +163,6 @@
     <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]"
                         value="illyusa Sales Team Distribution Group" >illyusa Sales Team Distribution Group</label >
     </li >
-    <li ><label ><input type="checkbox" class="inputRender" name="iTDeptEmail[]" value="citrix"
-                        value="Sales Center/Citrix and Genesys ID. (applicable for Customer Care)" >Sales
-        Center/Citrix and Genesys ID. (applicable for Customer Care)</label ></li >
 </ul >
 
 
@@ -188,6 +185,9 @@
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="outlook"
                         value="Will be a Contract After Termination" > Will be a Contract After Termination</label >
     </li >
+    <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" value="citrix"
+                        value="Sales Center/Citrix and Genesys ID. (applicable for Customer Care)" >Sales
+        Center/Citrix and Genesys ID. (applicable for Customer Care)</label ></li >
 </ul >
 
 
@@ -248,7 +248,7 @@ Aditional Instructions if applicable: <br >
         (Credit Card and Concur Access Requests) *new hires and separation
 
 </div >
-<ul >
+    <ul style="list-style: none" >
     <li >
         <label ><input type="checkbox" class="inputRender" name="creditCard[]" id="creditCard"
                        value="COMPANY CREDIT CARD" > COMPANY CREDIT CARD</label >
