added seasonal for employee type in separation

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -76,11 +76,14 @@
 
 <div class="left" >
     <label >Employee Status</label >
-    <select class="inputRender" name="hireStatus" id="hireStatus" >
-        <option value="empty" >Select</option >
-        <option value="Full-time" >Full-time</option >
-        <option value="Temporary" >Temporary</option >
-    </select >
+
+            <select class="inputRender" name="hireStatus" id="hireStatus" >
+                <option value="empty" >Select</option >
+                <option value="Full-time" >Full-time</option >
+                <option value="Part-Time" >Part-Time</option >
+                <option value="Seasonal" >Seasonal</option >
+                <option value="Temporary" >Temporary</option >
+            </select >
     <span id="hireStatusError" class="errorSpan" >*</span >
 </div >
 <div class="left" >
