see add/remove title and contact information in Outlook fixed

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -183,8 +183,8 @@
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="software" value="Software" >
         Software</label ></li >
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="outlook"
-                        value="Remove title and contact information in Outlook" > Add title and contact information
-        in Outlook</label ></li >
+                        value="Remove title and contact information in Outlook" >
+        Add/remove title and contact information in Outlook</label ></li >
     <li ><label ><input type="checkbox" class="inputRender" name="iTDept[]" id="outlook"
                         value="Will be a Contract After Termination" > Will be a Contract After Termination</label >
     </li >
