fixed empty fields showing up in separation section fix for Employee ID and Buddy name

--- a/resources/handlebars/separation.hbs
+++ b/resources/handlebars/separation.hbs
@@ -22,7 +22,7 @@
 <br ><br clear="left" >
 
 <div >
-    Nickname (if applicable): <input type="text" name="nickname" id="nickname" class="inputRender" >
+    Nickname (if applicable): <input type="text" name="buddy" id="buddy" class="inputRender" >
 </div >
 <br ><br >
 
