add other as a department

--- a/resources/handlebars/change_org.hbs
+++ b/resources/handlebars/change_org.hbs
@@ -45,6 +45,9 @@
             <option >Marketing</option >
             <option >Human Resources</option >
             <option >Quality and Tech</option >
+            <option >Public Relations</option >
+            <option value="Operations" >Operations</option >
+            <option value="Other" >Other</option >
         </select ><span id="departmentError" class="errorSpan" >*</span >
     </div >
     <div class="left" >
