Do not repeat your self with locations => hireStatus => department, etc

--- a/resources/handlebars/change_org.hbs
+++ b/resources/handlebars/change_org.hbs
@@ -20,6 +20,7 @@
     <div class="left" >
         <label >Email</label >
         <input type="text" class="inputRender" name="newEmail" id="newEmail" value="{{ mail }}" required >
+        <input type="hidden" class="inputRender" name="email" id="email" value="{{ mail }}" required >
         <span class="errorSpan" >*</span >
     </div >
     <div class="left" >
