--- a/resources/assets/less/main.less
+++ b/resources/assets/less/main.less
@@ -13,6 +13,11 @@ body{
     text-align: center;
 }
 
+.leftIdentation {
+    text-align: left;
+    align: left;
+}
+
 
 
 .mainFrm{
@@ -119,4 +124,8 @@ body{
     color: #bd9651;
     font-style: italic;
     font-size: 0.8em;
+    }
+
+.noticeThis {
+    font-weight: bold;
 }
